--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  flutter_bloc: ^8.1.4
+  equatable: ^2.0.5
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
